--- a/komodo-privacy-policy.html
+++ b/komodo-privacy-policy.html
@@ -1,7 +1,7 @@
 <html>
   <h1>Privacy Policy</h1>
   <li>The Komodo app communicates with a proprietary hardware platform to display sensor data. 
-  The app collects only sensor data from the platform such as temperature, realtive humidity, etc. No user data is collected.</li>
+  The app collects only sensor data from the platform such as temperature, relative humidity, etc. No user data is collected.</li>
   <li>The data is displayed in the app and not re-transmitted.</li>
   <li>No information is shared.</li>
 </html>
